--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,13 @@
   "name": "select and speak",
   "version": "1.0",
   "description": "select and speak!",
-  "permissions": ["declarativeContent", "storage"],
+  "permissions": ["declarativeContent", "storage", "tabs"],
   "background": {
-    "scripts": ["background.js"]
+    "service_worker": "src/background/background.js"
   },
-  "page_action": {
+  "action": {
     "default_title": "select and speak",
-    "default_popup": "popup.html",
+    "default_popup": "src/popup/popup.html",
     "default_icon": {
       "16": "/images/root-icon-16.png",
       "32": "/images/root-icon-32.png",
@@ -23,12 +23,11 @@
     "128": "/images/root-icon-128.png"
   },
   "options_page": "options.html",
-  "manifest_version": 2,
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+  "manifest_version": 3,
   "content_scripts": [
     {
-      "matches": ["*://*/*"],
-      "js": ["contentScript.js"]
+      "matches": ["<all_urls>"],
+      "js": ["src/content-script/contentScript.js"]
     }
   ],
   "web_accessible_resources": []
